prevent nav control buttons from wrapping awkwardly when they overflow

--- a/app/assets/stylesheets/pages/wiki.scss
+++ b/app/assets/stylesheets/pages/wiki.scss
@@ -51,6 +51,12 @@
     .git-clone-holder {
       width: 480px;
     }
+
+    .nav-controls {
+      width: auto;
+      min-width: 50%;
+      white-space: nowrap;
+    }
   }
 
   @media (min-width: $screen-md-min) {
